--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,5 +8,6 @@
                  android:theme="@style/AppTheme"
                  tools:ignore="GoogleAppIndexingWarning">
         <activity android:name=".FirstActivity"/>
+        <activity android:name=".SecondActivity"/>
     </application>
 </manifest>
